# AquariumMonitor

./: build.gyp  build.sh
AM_Server/: readme
AM_Service/: CMakeLists.txt  main.cpp
AM_Service/include/: AM_Device.h  AM_Element.h  AM_PhResistor.h  AM_Relay.h  AM_Sensor.h  AM_Therm.h
AM_Service/src/: AM_PhResistor.cpp  AM_Relay.cpp  AM_Sensor.cpp  AM_Therm.cpp
Scripts/: start_am_service.sh
